fix: align section anchors under sticky header and rename project to Velocity Grid

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,6 +7,7 @@
 html {
   font-size: 100%;
   scroll-behavior: smooth;
+  scroll-padding-top: var(--header-height, #{rem(64px)});
 }
 
 body {
@@ -25,10 +26,6 @@ body {
   outline: rem(2px) solid $color-accent;
   outline-offset: rem(2px);
   border-radius: rem(2px);
-}
-
-:target {
-  scroll-margin-top: $space-4xl;
 }
 
 .container {
